Version 3.4.1 - 2015-03-03
* Use auxiliar field instead of redefine original functional one

Version 3.4.0 - 2014-11-03
* Initial release