@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<!-- The COPYRIGHT file at the top level of this repository contains the full
+     copyright notices and license terms. -->
+<data>
+    <xpath expr="/tree/field[@name='unit']" position="after">
+        <field name="manual_delivery_date"/>
+    </xpath>
+</data>
